feat(api-docs):finished doc
