# src/controllers/albuns/create.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from "express";
 import { PrismaClient } from "../../models/generated/client/index.js";
 import { Album } from "../../models/interfaces/interfaces.js";
+import { GetArtistName } from "../../utils/getArtistName.js";
 
 const prisma = new PrismaClient();
 
@@ -8,9 +9,14 @@ export const CreateAlbum = async (req: Request, res: Response) => {
  try{
     const album:Album = req.body
 
-    if(!album.title || !album.artistId || (!album.imageURL && !album.imageBase64)){
+    if(!album.title || !album.artistName|| (!album.imageURL && !album.imageBase64)){
         return res.status(400).json({ message: "Todos os campos são obrigatórios" });
     }
+    const artistId = await GetArtistName(album.artistName);
+
+    if(!artistId){
+            return res.status(404).json({ message: "artista não encontrado"})
+        }
 
     const albumDB = await prisma.album.create({
         data: {
@@ -18,7 +24,8 @@ export const CreateAlbum = async (req: Request, res: Response) => {
             realaseDate: album.releaseDate,
             imageURL: album.imageURL,
             imageBase64: album.imageBase64,
-            artistId: album.artistId
+            artistId: artistId,
+            artistName: album.artistName,
         }
     });
 
